<resources>
    <string name="facebook_app_id">376681732903684</string>
    <string name="fb_login_protocol_scheme">fb376681732903684</string>

    <string name="app_name">CX Factor</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="forgot_password"><u><b>Forgot Password?</b></u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_or_email">Email</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_google">Login with Google      </string>
    <string name="term_policy"><u><b>Terms and Privacy Policy</b></u></string>


    <!--SMS-->
    <string name="action_ok">OK</string>
    <string name="action_send_normal_sms">Send normal SMS</string>
    <string name="action_send_condition_sms">Send Condition SMS</string>

    <string name="your_cellphone_number">Your cellphone number:</string>
    <string name="phone_number_hint">912345678</string>
    <string name="toast_sending_sms">Sending sms…</string>

    <string name="permission_alert_dialog_title">Requesting Permissions</string>
    <string name="permission_dialog_message">The app will now request your permission to use SMS and Location services. We use SMS and Location permission to enable Auto-Reply SMS and Find Your Phone functions. You can deny these permissions anytime by using setting app screen. For more infomation, please visit our Terms and Privacy Policy.</string>

    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="register">Register</string>
    <string name="confim_password">Confim Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed. Your email might have been existence!</string>
    <string name="auto_send_sms">Reply SMS</string>
    <string name="history">History</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_where_i_was">Where I was?</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Log Out</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Where I was?</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="fossick">Fossicked?</string>
    <string name="rescure_alert_dialog_title">Rescue Alert !</string>
    <string name="rescure_alert_dialog_message">The EMERGENCY MESSAGE is about to send to Emergency Contacts for rescuing.\nWould you like to keep this action?</string>
    <string name="action_continue">Continue</string>
    <string name="action_abort">Abort</string>
    <string name="action_no">No</string>
    <string name="action_loading">Loading</string>
    <string name="gps_is_not_enabled">GPS must be enabled to find your phone. Turn your location?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="blacklist">Blacklist</string>
    <string name="sms_replier_records">SMS Replier Records</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="find_my_phone">Find my phone</string>
    <string name="decline_calls">Decline Calls</string>
    <string name="auto_reply_sms">Auto reply SMS</string>
    <string name="title_activity_maps">Find My Phone</string>
    <string name="go"><u><b><![CDATA[>> Go >>]]></b></u></string>
</resources>
