<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/btn_History"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circle_history"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_ReplySMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_above="@id/btn_Rescue"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"

            android:background="@drawable/circle_autosendsms"
            android:text="@string/auto_send_sms"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Fossick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_History"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle_fossick"
            android:text="@string/fossick"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Rescue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_Fossick"
            android:background="@drawable/circle_rescue"
            android:text="Rescure"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>